--- a/index.html
+++ b/index.html
@@ -16,9 +16,23 @@
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-5QJG2HTJ');</script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5QJG2HTJ" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="app">
         <input type="checkbox" hidden class="show-modal__input" id="modal-video">
         <!-- Header -->
@@ -109,7 +123,8 @@
                                             <a href="./blog.html" class="navbar-mobile__subitem-link">Blog</a>
                                         </li>
                                         <li class="navbar-mobile__subitem">
-                                            <a href="./blogdetail.html" class="navbar-mobile__subitem-link">Blog Details</a>
+                                            <a href="./blogdetail.html" class="navbar-mobile__subitem-link">Blog
+                                                Details</a>
                                         </li>
                                         <li class="navbar-mobile__subitem">
                                             <a href="./product.html" class="navbar-mobile__subitem-link">Element</a>
