--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                 ]
             });
 
-            $("#clickButton").click(() => {
+            $("#clickButton").click(function(){
                 window.dataLayer.push({
                     event: 'Mouse Click', // Tên sự kiện bạn đã đặt trong GTM
                     buttonName: 'Đăng ký ngay' // Thông tin thêm (tùy chọn)
